--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -71,12 +71,12 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following bug fixes:
 
-=== Directionality commands was setting the `dir` attribute on `contenteditable="false"` elements within a `contenteditable="false"` root.
+=== Text directionality could be set on elements with a `contenteditable="false"` attribute set when within a root with a `contenteditable="false"` attribute set
 //#TINY-9662
 
-In previous versions of {productname}, directionality commands applied the `dir` attribute to elements within a `contenteditable="false"` root, which caused block elements that shouldn't be editable to be selected. 
+Previously, text directionality commands, which set the `dir` attribute, could be applied to elements with a `contenteditable="false"` attribute set when those elements were within a root with a `contenteditable="false"` attribute set.
 
-As a result, the `dir` attribute of these block elements would be updated with either `"ltr"` or `"rtl"` values. To address this issue, {productname} now checks if a element is set to `contenteditable= "false"` first, and if it is, the `dir` attribute is **not applied** to the selection.
+As of this release, {productname} now checks if a selected element has a `contenteditable="false"` attribute set. And, on elements with this attribute set, text directionality commands are not applied to the selection, as expected.
 
 [[security-fixes]]
 == Security fixes
