--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -11,6 +11,7 @@
 
 {productname} 6.5 was released for {enterpriseversion} and {cloudname} on Wednesday, June 14^th^, 2023. These release notes provide an overview of the changes for {productname} 6.5:
 
+* xref:new-open-source-plugin[New Open Source Plugin]
 * xref:new-premium-plugin[New Premium Plugin]
 * xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
 * xref:accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium Plugin end-of-life announcement]
@@ -22,8 +23,29 @@
 * xref:security-fixes[Security fixes]
 * xref:known-issues[Known issues]
 
-[[new-premium-plugin]]
-== New Premium Plugin
+[[new-open-source-plugin]]
+== New Open Source Plugin
+
+The following new Open Source Plugin was released alongside {productname} 6.5.
+
+=== Accordion 1.0.0
+//#TINY-9730
+
+The new Open Source plugin, **Accordion** allows for the creation of sections in a document that can be expanded or collapsed to show or hide additional content.
+
+The Accordion plugin also provides integrators with four commands:
+
+* `InsertAccordion`;
+* `ToggleAccordion`;
+* ToggleAllAccordions`;
+* `RemoveAccordion`;
+
+and two initialization options
+
+* `details_initial_state`;
+* `details_serialized_state`.
+
+For information on the **Accordion** plugin see xref:accordion.adoc[Accordion].
 
 [[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
