--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -39,7 +39,7 @@ The {productname} 6.5 release includes an accompanying release of the **Advanced
 === Advanced Code Editor did not preserve changes to _font size_ or _dark/light mode_ state.
 //#TINY-9749
 
-In previous versions of {productname}, the _font size_ and _dark/light mode_ states within the Advanced Code Editor were not preserved after closing the dialog.
+In previous versions of the Advanced Code Editor, the _font size_ and _dark/light mode_ states within the Advanced Code Editor were not preserved after closing the dialog.
 
 When the Advanced Code Editor was closed, these states reverted to their default values.
 
