--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -150,16 +150,27 @@ For information on the **Accessibility Checker** plugin, see: xref:accessibility
 
 The {productname} 6.5 release includes an accompanying release of the **Advanced Code Editor** premium plugin.
 
-**Advanced Code Editor** 3.3.0 includes two fixes:
+**Advanced Code Editor** 3.3.0 includes the following three changes.
+
+=== Advanced Code Editor did not preserve changes to _font size_ or _dark/light mode_ state.
+//#TINY-9749
+
+In previous versions of the **Advanced Code Editor**, the _font size_ and _dark/light mode_ states were not preserved after closing the dialog.
+
+When the **Advanced Code Editor** was closed, these states reverted to their default values.
+
+In **Advanced Code Editor** 3.3.0, _font size_ and _dark/light mode_ states are preserved when the editor is closed.
+
+NOTE: This issue only affected the **Advanced Coded Editor** when it was opened in a dialog.
 
 === The _Copy code_ button was incorrectly styled within the Advanced Code Editor.
 //#TINY-9698
 
-In previous versions of {productname}, the _Copy code_ button, presented as part of the Advanced Code Editor, was styled incorrectly. Specifically, it was missing the grey background used in other, equivalent, buttons.
+In previous versions of **Advanced Code Editor**, the _Copy code_ button, was styled incorrectly. Specifically, it was missing the grey background used in other, equivalent, buttons.
 
 This was caused by an incorrect CSS setting. The setting, `borderless: true`, should not have been applied. As a consequence, the button wasn't correctly styled. 
 
-In {productname} 6.5, the `borderless: true` setting has been removed and the button is now correctly styled.
+In **Advanced Code Editor** 3.3.0, the `borderless: true` setting has been removed and the button is now correctly styled.
 
 === The Advanced Code Editor now preserves selected font size.
 //#TINY-9701
